--- a/Regression pandas usage and matplotlib .ipynb
+++ b/Regression pandas usage and matplotlib .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "49afbf7c",
+   "id": "87a01237",
    "metadata": {},
    "source": [
     "# Reggresion , Pandas , matplotlib"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a878fe27",
+   "id": "c79970e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +20,170 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "26580596",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('http://bit.ly/imdbratings')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3404056d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>star_rating</th>\n",
+       "      <th>title</th>\n",
+       "      <th>content_rating</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>actors_list</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9.3</td>\n",
+       "      <td>The Shawshank Redemption</td>\n",
+       "      <td>R</td>\n",
+       "      <td>Crime</td>\n",
+       "      <td>142</td>\n",
+       "      <td>[u'Tim Robbins', u'Morgan Freeman', u'Bob Gunt...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9.2</td>\n",
+       "      <td>The Godfather</td>\n",
+       "      <td>R</td>\n",
+       "      <td>Crime</td>\n",
+       "      <td>175</td>\n",
+       "      <td>[u'Marlon Brando', u'Al Pacino', u'James Caan']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9.1</td>\n",
+       "      <td>The Godfather: Part II</td>\n",
+       "      <td>R</td>\n",
+       "      <td>Crime</td>\n",
+       "      <td>200</td>\n",
+       "      <td>[u'Al Pacino', u'Robert De Niro', u'Robert Duv...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9.0</td>\n",
+       "      <td>The Dark Knight</td>\n",
+       "      <td>PG-13</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>152</td>\n",
+       "      <td>[u'Christian Bale', u'Heath Ledger', u'Aaron E...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8.9</td>\n",
+       "      <td>Pulp Fiction</td>\n",
+       "      <td>R</td>\n",
+       "      <td>Crime</td>\n",
+       "      <td>154</td>\n",
+       "      <td>[u'John Travolta', u'Uma Thurman', u'Samuel L....</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   star_rating                     title content_rating   genre  duration  \\\n",
+       "0          9.3  The Shawshank Redemption              R   Crime       142   \n",
+       "1          9.2             The Godfather              R   Crime       175   \n",
+       "2          9.1    The Godfather: Part II              R   Crime       200   \n",
+       "3          9.0           The Dark Knight          PG-13  Action       152   \n",
+       "4          8.9              Pulp Fiction              R   Crime       154   \n",
+       "\n",
+       "                                         actors_list  \n",
+       "0  [u'Tim Robbins', u'Morgan Freeman', u'Bob Gunt...  \n",
+       "1    [u'Marlon Brando', u'Al Pacino', u'James Caan']  \n",
+       "2  [u'Al Pacino', u'Robert De Niro', u'Robert Duv...  \n",
+       "3  [u'Christian Bale', u'Heath Ledger', u'Aaron E...  \n",
+       "4  [u'John Travolta', u'Uma Thurman', u'Samuel L....  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3b914db8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(979, 6)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f9f8d491",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(979, 6)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6078cfed",
+   "id": "0e597186",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -29,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bea33f9a",
+   "id": "90aa8e30",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -37,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c5e8cef",
+   "id": "c4620fa0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -45,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0847cd6",
+   "id": "9680284d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -53,39 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d94ba30",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d2070ee7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6147722d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cde6090a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "98aab4f9",
+   "id": "0db4f1d8",
    "metadata": {},
    "outputs": [],
    "source": []
