done the cross val with the gareth dataseet of sales learned more on it

--- a/Best way to train a model better than test train split.ipynb
+++ b/Best way to train a model better than test train split.ipynb
@@ -164,7 +164,7 @@
     }
    ],
    "source": [
-    "# Exaaample how to split a dataset \n",
+    "# Example how to split a dataset \n",
     "from sklearn.model_selection import KFold\n",
     "kf = KFold(n_splits=5,shuffle=False)   # True karoge toh no. shuffle hoga\n",
     "kf_used = kf.get_n_splits(25) # this is to just see how to split in new sklearn\n",
