done with the uncderstading of various classification metrices and now moving how to fix them for high accuracy of model by fixxing the threshold

--- a/Evaluating the classification model.ipynb
+++ b/Evaluating the classification model.ipynb
@@ -64,7 +64,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
+   "id": "18375efe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "6521262d",
    "metadata": {},
    "outputs": [],
@@ -82,17 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "18375efe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a058746f",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "9e24ef02",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "2907c79b",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
        "4                     2.288   33        1  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
+   "id": "07c2cf93",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(768, 9)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pima.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "cdb58693",
    "metadata": {},
    "outputs": [],
@@ -254,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "7e4be1ae",
    "metadata": {},
    "outputs": [],
@@ -264,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "5c1688ab",
    "metadata": {},
    "outputs": [],
@@ -274,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "4f643013",
    "metadata": {},
    "outputs": [],
@@ -284,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "698c3e5d",
    "metadata": {},
    "outputs": [
@@ -294,7 +315,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "0acf7ce1",
    "metadata": {},
    "outputs": [],
@@ -316,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "00ff243f",
    "metadata": {},
    "outputs": [],
@@ -326,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "ccd7fe2f",
    "metadata": {},
    "outputs": [],
@@ -336,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "e6c7a4f4",
    "metadata": {},
    "outputs": [
@@ -346,7 +367,7 @@
        "0.6770833333333334"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "645b4eb8",
    "metadata": {},
    "outputs": [],
@@ -375,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "9c473798",
    "metadata": {},
    "outputs": [
@@ -387,7 +408,7 @@
        "Name: Outcome, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "id": "253631e6",
    "metadata": {},
    "outputs": [
@@ -409,7 +430,7 @@
        "0.3229166666666667"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "id": "7e26edff",
    "metadata": {},
    "outputs": [
@@ -431,7 +452,7 @@
        "0.6770833333333333"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "id": "95e65117",
    "metadata": {},
    "outputs": [
@@ -453,7 +474,7 @@
        "0.6770833333333333"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "id": "b3825ae7",
    "metadata": {},
    "outputs": [
@@ -476,7 +497,7 @@
        "Name: Outcome, dtype: float64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "id": "701a79f9",
    "metadata": {},
    "outputs": [],
@@ -498,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "id": "2966e1c8",
    "metadata": {},
    "outputs": [
@@ -519,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "id": "5cf00653",
    "metadata": {},
    "outputs": [],
@@ -532,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "id": "4156e2e9",
    "metadata": {},
    "outputs": [],
@@ -542,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 29,
    "id": "8b245fa7",
    "metadata": {},
    "outputs": [],
@@ -553,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 30,
    "id": "775b13a8",
    "metadata": {},
    "outputs": [
@@ -575,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
    "id": "93315180",
    "metadata": {},
    "outputs": [],
@@ -586,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 32,
    "id": "ac956201",
    "metadata": {},
    "outputs": [],
@@ -598,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 33,
    "id": "ac20a54b",
    "metadata": {},
    "outputs": [],
@@ -613,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 34,
    "id": "ee0d6e79",
    "metadata": {},
    "outputs": [
@@ -634,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 35,
    "id": "65b04956",
    "metadata": {},
    "outputs": [],
@@ -649,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 36,
    "id": "1ef8cf85",
    "metadata": {},
    "outputs": [],
@@ -661,12 +682,163 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2079667c",
+   "metadata": {},
+   "source": [
+    "# Metrics computed from a confusion matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "1c8083fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6770833333333334\n",
+      "0.6770833333333334\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Classification accuracy - how often our classifier correct ?\n",
+    "print((TP + TN) / (TP + TN + FP + FN))\n",
+    "print(metrics.accuracy_score(Y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "6ce65d69",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.3229166666666667\n",
+      "0.32291666666666663\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Classification Error: Overall, how often is the classifier incorrect?\n",
+    "#Also known as \"Misclassification Rate\"\n",
+    "print((FP + FN) / (TP + TN + FP + FN))\n",
+    "print(1 - metrics.accuracy_score(Y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "2d13e044",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.25806451612903225\n",
+      "0.25806451612903225\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sensitivity: When the actual value is positive, how often is the prediction correct?\n",
+    "\n",
+    "# How \"sensitive\" is the classifier to detecting positive instances?\n",
+    "# Also known as \"True Positive Rate\" or \"Recall\n",
+    "\n",
+    "print(TP / (TP + FN))\n",
+    "print(metrics.recall_score(Y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "bf25c672",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8769230769230769\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Specificity: When the actual value is negative, how often is the prediction correct?\n",
+    "\n",
+    "#How \"specific\" (or \"selective\") is the classifier in predicting positive instances?\n",
+    "\n",
+    "print(TN / (TN + FP))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "ef5d4e2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.12307692307692308\n"
+     ]
+    }
+   ],
+   "source": [
+    "#False Positive Rate: When the actual value is negative, how often is the prediction incorrect?\n",
+    "print(FP / (TN + FP))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "f289bfe7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n",
+      "0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Precision: When a positive value is predicted, how often is the prediction correct?\n",
+    "\n",
+    "#How \"precise\" is the classifier when predicting positive instances?\n",
+    "print(TP / (TP + FP))\n",
+    "print(metrics.precision_score(Y_test, y_pred))\n",
+    "###Many other metrics can be computed: F1 score, Matthews correlation coefficient, et"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f761f95",
+   "id": "30ea42c9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Conclusion:\n",
+    "##Confusion matrix gives you a more complete picture of how your classifier is performing\n",
+    "##Also allows you to compute various classification metrics, and these metrics can guide your model selection\n",
+    "#Which metrics should you focus on?\n",
+    "\n",
+    "#Choice of metric depends on your business objective\n",
+    "#Spam filter (positive class is \"spam\"): Optimize for precision or specificity because false negatives \n",
+    "# (spam goes to the inbox) are more acceptable than false positives (non-spam is caught by the spam filter)\n",
+    "#Fraudulent transaction detector (positive class is \"fraud\"): Optimize for sensitivity because false positives (normal transactions that are flagged as possible fraud) are more acceptable than false negatives (fraudulent transactions that are not detected)"
+   ]
   }
  ],
  "metadata": {
